fixing main yml

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: Lolden's Knowledge Base
+site_name: Lolden\'s Knowledge Base
 site_url: https://docs.lolden.xyz
 theme:
   name: material
