--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,11 +6,11 @@ theme:
     - navigation.tabs
     - navigation.sections
     - toc.integrate
-    - navigate.top
+    - navigation.top
     - search.suggest
     - search.highlight
     - content.tabs.link
-    - content.code.annotation
+    - content.code.annotate
     - content.code.copy
   language: en
   palette:
@@ -40,22 +40,27 @@ extra:
 
 markdown_extensions:
   - abbr
+  - admonition
   - attr_list
+  - def_list
+  - footnotes
+  - pymdownx.arithmatex:
+      generic: true
   - pymdownx.highlight:
       anchor_linenums: true
   - pymdownx.inlinehilite
   - pymdownx.snippets
-  - admonition
-  - pymdownx.arithmatex:
-      generic: true
-  - footnotes
   - pymdownx.details
   - pymdownx.superfences
   - pymdownx.mark
-  - attr_list
   - pymdownx.emoji:
-      emoji_index: !!python/name:materialx.emoji.twemoji
-      emoji_generator: !!python/name:materialx.emoji.to_svg
+      emoji_index: !!python/name:material.extensions.emoji.twemoji
+      emoji_generator: !!python/name:material.extensions.emoji.to_svg
+      options:
+        custom_icons:
+          - overrides/.icons
+  - pymdownx.tasklist:
+      custom_checkbox: true
 
 copyright: |
   &copy; 2024 <a href="https://github.com/LoldenCode" target="_blank" rel="noopener">Alden Wilson</a>
